// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "justifyContent": "space-between",
      "marginHorizontal": 10,
      "paddingBottom": 70,
      "paddingTop": 10,
    }
  }
>
  <View>
    <Image
      style={
        Object {
          "alignSelf": "center",
          "height": 270,
          "marginVertical": 20,
          "width": 240,
        }
      }
    />
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
          "marginBottom": 10,
          "marginHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Something's gone wrong
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 15,
          "marginHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#006699",
        "borderRadius": 4,
        "elevation": 3,
        "height": 36,
        "justifyContent": "center",
        "minWidth": 100,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 5,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "paddingTop": 0,
        }
      }
    >
      RETRY
    </Text>
  </View>
</View>
`;

exports[`2. a full article with an image as the lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <ModalImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": -13.75,
              "marginTop": 10,
            }
          }
        >
          <ArticleLabel />
        </View>
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Regular",
              "fontSize": 20,
              "lineHeight": 28,
              "marginTop": -7,
              "paddingBottom": 12,
            }
          }
        >
          Some Standfirst
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 15,
              }
            }
          >
            <NewArticleFlag />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            <ArticleBylineWithLinks />
          </Text>
        </View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote />
      </View>
    </View>
    <View>
      <View>
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 5,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 20,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <RelatedArticles />
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`3. an article with a video as the lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <Video />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": -13.75,
              "marginTop": 10,
            }
          }
        >
          <VideoLabel />
        </View>
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. an article with no lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`5. an article with ads 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Ad />
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`6. an article loading state 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexBasis": "100%",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator />
</View>
`;

exports[`7. an article with updated byline 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`7. an article with updated byline 2`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            <ArticleBylineWithLinks />
          </Text>
        </View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;
